--- a/.gitignore
+++ b/.gitignore
@@ -115,3 +115,4 @@ src/fitnessd_loader/.idea/vcs.xml
 src/fitnessd_loader/.idea/workspace.xml
 src/fitnessd_loader/.idea/inspectionProfiles/Project_Default.xml
 settings.json
+.DS_Store
